apps/base/atuin/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: atuin
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: atuin
    spec:
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:latest
          imagePullPolicy: Always
          args:
            - server
            - start
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: metrics
              containerPort: 9901
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - name: atuin-pvc
              mountPath: /config
      volumes:
        - name: atuin-pvc
          persistentVolumeClaim:
            claimName: atuin-pvc
